z-index fixes

--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -123,7 +123,7 @@ a.filled-button:hover {
   top: 0;
   bottom: 0;
   position: fixed;
-  z-index: 9999999;
+  z-index: 9999999999999999999;
   color: #fff;
 }
 
@@ -251,7 +251,7 @@ header .navbar {
 	color: #f33f3f;
 }
 #navbarResponsive {
-	z-index: 999;
+	z-index: 999999;
 }
 .navbar-collapse {
 	text-align: center;
@@ -312,7 +312,7 @@ header .navbar {
 	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/logo_style.png);
 	height: 150px;
 	width: 150px;
-	z-index: 10000000000;
+	z-index: 1000;
 	-webkit-background-size: contain;
     -moz-background-size: contain;
     -o-background-size: contain;
@@ -736,7 +736,7 @@ h6 {
 		display: none;
 	}
 	#navbarResponsive {
-	    z-index: 99999;
+	    z-index: 999999999999;
 	    position: absolute;
 	    top: 80px;
 	    left: 0;
